@startuml
!pragma layout smetana
class Author{
- String name
- ArrayList<Title> titles
+ Author(String name)
+ void addTitle(Title)
+ float calculateTotalPay()
}
Author *-- Title

abstract class Title{
- String title
- String literatureType
# int copies
# double rate
+ Title(String title, String literatureType, int copies)
+ double calculateRoyalty()
# double calculatePoints()
# double calculateLiteraturePoints()

}
Title <|-- AudioBook
class AudioBook{
- int durationInMinutes
+ AudioBook(String title, String literatureType, int copies, int durationInMinutes)
# double calculatePoints()
# double calculateLiteraturePoints()

}
Title <|-- PrintedBook
class PrintedBook{
- int pages
+ PrintedBook(String title, String literatureType, int copies, int pages)
# double calculatePoints()
# double calculateLiteraturePoints()

}

@enduml